# lmc-cli

./: Cargo.toml  README.md
.github/workflows/: checks.yml
src/: main.rs
