[package]
name = "lmc-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Coward <ethan@ethancoward.dev>"]
description = "CLI for LMC Assembly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.1.14", features = ["derive"] }
lmc-assembly = "^0.1"
